[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouch"
dynamic = ["version"]
description = "Odd Utility Collection Hub"
readme = "README.md"
authors = [
    {name = "Francis Lim", email = "thyeem@gmail.com"}
]
keywords = ["utilities", "functional"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.6"
dependencies = ["foc"]

[project.urls]
Homepage = "https://github.com/thyeem/ouch"

[tool.setuptools]
packages = ["ouch"]

[tool.setuptools.dynamic]
version = {attr = "ouch.__version__"}
